<?xml version="1.0"?>
<package format="2">
  <name>node_interface_test</name>
  <version>0.1.0</version>
  <description>Additiional testing tools at node level</description>

  <maintainer email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</maintainer>

  <license>Apache 2.0</license>

  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rospy_message_converter</depend>
  <depend>rostopic</depend>
  <depend>rosservice</depend>
  <test_depend>roslint</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>rostest</test_depend>

</package>
